Source/WebKit2/UIProcess/mac/WebPageProxyMac.mm
@@ -40,6 +40,7 @@
 #import "PluginProcessProxy.h"
 #import "StringUtilities.h"
 #import "TextChecker.h"
+#import "WebContext.h"
 #import "WebPageMessages.h"
 #import "WebProcessProxy.h"
 #import <WebCore/DictationAlternative.h>
@@ -480,7 +481,7 @@ void WebPageProxy::getPlugInInformation(pid_t plugInProcessID, PassRefPtr<Dictio
     m_process->send(Messages::WebPage::ContainsPluginViewsWithPluginProcessToken(plugInProcessProxy->pluginProcessToken(), callbackID), m_pageID);
 }
 
-void WebPageProxy::containsPlugInCallback(bool containsPlugIn, uint64_t plugInToken, uint64_t callbackID)
+void WebPageProxy::containsPlugInCallback(bool containsPlugIn, const Vector<String>& nonPlayingPlugInInstanceMimeTypes, uint64_t plugInToken, uint64_t callbackID)
 {
     RefPtr<DictionaryCallback> callback = m_plugInInformationCallbacks.take(callbackID);
     if (!callback) {
@@ -496,9 +497,19 @@ void WebPageProxy::containsPlugInCallback(bool containsPlugIn, uint64_t plugInTo
     PluginProcessProxy* plugInProcessProxy = PluginProcessManager::shared().findPlugInProcessByToken(plugInToken);
     ASSERT(plugInProcessProxy);
 
-    ImmutableDictionary::MapType map;
-    getPluginModuleInformation(plugInProcessProxy->pluginProcessAttributes().moduleInfo, map);
-    RefPtr<ImmutableDictionary> plugInInformation = ImmutableDictionary::adopt(map);
+    String plugInBundleIdentifier = plugInProcessProxy->pluginProcessAttributes().moduleInfo.bundleIdentifier;
+    bool containsNonPlayingInstanceOfPlugIn = false;
+
+    for (const String& plugInMimeType: nonPlayingPlugInInstanceMimeTypes) {
+        String mimeType = plugInMimeType;
+        PluginModuleInfo plugInInfo = m_process->context()->pluginInfoStore().findPlugin(mimeType, KURL());
+        if (plugInInfo.bundleIdentifier == plugInBundleIdentifier) {
+            containsNonPlayingInstanceOfPlugIn = true;
+            break;
+        }
+    }
+
+    RefPtr<ImmutableDictionary> plugInInformation = createPlugInInformationDictionary(plugInProcessProxy->pluginProcessAttributes().moduleInfo, containsNonPlayingInstanceOfPlugIn);
 
     callback->performCallbackWithReturnValue(plugInInformation.get());
 }
